--- a/eclipseCon2014/org.eclipse.e4.examples.di.presentation/index.html
+++ b/eclipseCon2014/org.eclipse.e4.examples.di.presentation/index.html
@@ -264,7 +264,7 @@ public Object get(IObjectDescriptor descriptor, IRequestor requestor,
 				</section>
 
 				<section>
-					<h3>Enhance an RCP application - Run</h3>
+					<h3>Enhance an RCP application - 1.1</h3>
 					<ol>
 						<li><a href="https://github.com/scela/EclipseCon2014">https://github.com/scela/EclipseCon2014</a></li>
 						<li>org.eclipse.e4.examples.di.product - the RCP application</li>
@@ -275,7 +275,7 @@ public Object get(IObjectDescriptor descriptor, IRequestor requestor,
 				</section>
 
 				<section>
-					<h3>Exercise</h3>
+					<h3>Exercise - 1.1</h3>
 					<ol>
 						<li>We're replacing <code>OldExtensionReader</code>, getting rid of the boilerplate code.</li>
 						<li>Replacing the calls to <code>process()</code>, <code>added(final IExtension[])</code>, and <code>removed(final IExtension[])</code>.</li>
@@ -288,6 +288,51 @@ public void setExtensions(
     //... stuff
 }
 </code></pre>
+				</section>
+
+				<section>
+					<h3>Exercise - 1.2</h3>
+					<ol>
+						<li>Provide the <code>@Extension</code> annotation for the object supplier.</li>
+						<li>Provide an implementation class that extends <code>ExtendedObjectSupplier</code>.</li>
+						<li>Register the OSGi service using Declarative Services.</li>
+					</ol>
+				</section>
+
+				<section>
+					<h3>Exercise - 1.3</h3>
+					<ol>
+						<li>Make sure we're calling the @Extension object supplier.</li>
+						<li>Have <code>SamplePart</code> use DI to instantiate the <code>ExtensionReader</code>.</li>
+					</ol>
+				</section>
+
+				<section>
+					<h3>Exercise - 1.4</h3>
+					<ol>
+						<li>Return the valid configuration elements for <code>@Extension</code>.</li>
+						<li>Get the <code>IExtensionRegistry</code>.</li>
+						<li>Get the annotation information.</li>
+						<li>Return the requested information.</li>
+					</ol>
+				</section>
+
+				<section>
+					<h3>Exercise - 1.5</h3>
+					<ol>
+						<li>Add a registry listener to respond to changes if the request should be tracked.</li>
+						<li>Re-evaluate the requestor by resolving the arguments and then executing it again.</li>
+						<li>Check for requestor validity.</li>
+					</ol>
+				</section>
+
+				<section>
+					<h3>Exercise - 1.6</h3>
+					<ol>
+						<li>Added bonus: remove all listeners from a requestor.</li>
+						<li>In some scenarios, a single requestor can generate multiple listeners.</li>
+						<li>Store them in a set and remove them if a requestor becomes invalid.</li>
+					</ol>
 				</section>
 
 				<section>
