Pull over DI presentation changes.

--- a/eclipseCon2014/org.eclipse.e4.examples.di.presentation/index.html
+++ b/eclipseCon2014/org.eclipse.e4.examples.di.presentation/index.html
@@ -54,6 +54,33 @@
 				</section>
 
 				<section>
+					<h3>Introduction</h3>
+					<table border="0" align="center">
+						<tr>
+							<td><img src="images/paul.jpg" alt="Pic of Paul"/></td>
+							<td>Paul Webster</td>
+						</tr>
+						<tr>
+							<td><img src="images/sopot.jpg" alt="Pic of Paul"/></td>
+							<td>Sopot Çela</td>
+						</tr>
+						<tr>
+							<td><img src="images/LarsVogel.jpg" alt="Pic of Paul"/></td>
+							<td>Lars Vogel</td>
+						</tr>
+					</table>
+				</section>
+
+				<section>
+					<h3>Overview</h3>
+					<ul>
+						<li>Customizing dependency injection behavior with custom annotations</li>
+						<li>Exploiting Eclipse4 advanced rendering</li>
+						<li>Framework services replacement and model extensions</li>
+					</ul>
+				</section>
+
+				<section>
 					<h2>Eclipse Core DI</h2>
 					<ol>
 						<li>Retrieves its information from the <code>IEclipseContext</code>.</li>
