Update eclipse eval slide

--- a/eclipseCon2014/org.eclipse.e4.examples.css.presentation/index.html
+++ b/eclipseCon2014/org.eclipse.e4.examples.css.presentation/index.html
@@ -594,6 +594,10 @@ control.setData(CSSSWTConstants.CSS_CLASS_NAME_KEY, "infoHeader");
 				</section>
 
 				<section>
+					<img src="images/eval.jpg" alt="Please evaluate this session online"/>
+				</section>
+
+				<section>
 					<h1>THE END</h1>
 					<h3>BY Paul Webster</h3>
 				</section>
